[package]
name = "macroquad-canvas-2d"
version = "0.2.1"
authors = ["nicolas <nicolas.sabbatini.95@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Add canvas functionality to macroquad."
repository = "https://git.sr.ht/~nik_codes/macroquad-canvas"
keywords = ["macroquad", "gamedev"]
categories = ["game-development"]
exclude = ["examples"]

[dependencies]
macroquad = "0.3"

[profile.dev.package.'*']
opt-level = 3

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "coordinates"
path = "examples/coordinates.rs"
