[package]
name = "macroquad-canvas-2d"
version = "0.4.0"
authors = ["Nicolas <nik.code.things@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Add canvas functionality to macroquad."
repository = "https://github.com/nicolas-sabbatini/macroquad-canvas-2d"
keywords = ["macroquad", "gamedev"]
categories = ["game-development"]
exclude = ["examples"]

[dependencies]
macroquad = "0.4"

[profile.dev.package.'*']
opt-level = 3

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "coordinates"
path = "examples/coordinates.rs"
